# data-lineage-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/agent/: agent.py  prompts.py  tools.py
src/api/: app.py  deps.py  routes.py
src/database/: connector.py  seed.py
src/models/: lineage.py
src/services/: agent_service.py
src/static/: index.html
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent_service.py  test_tools.py
